--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "kysely-codegen --out-file $PWD/kysely.codegen.ts"
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.26.3",
     "@clerk/nextjs": "^4.25.3",
+    "@planetscale/database": "^1.11.0",
+    "kysely": "^0.26.3",
+    "kysely-planetscale": "^1.4.0",
     "next": "13.5.4",
+    "partysocket": "0.0.8",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7",
-    "partysocket": "0.0.8"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -25,9 +29,11 @@
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "kysely-codegen": "^0.10.1",
+    "mysql2": "^3.6.1",
+    "partykit": "0.0.28",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5",
-    "partykit": "0.0.28"
+    "typescript": "^5"
   }
 }
