--- a/.env
+++ b/.env
@@ -1,18 +1,1 @@
-# CLERK
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y3V0ZS1ib2FyLTExLmNsZXJrLmFjY291bnRzLmRldiQ
-CLERK_SECRET_KEY=sk_test_hCLS0kEdWwsWWphKv99tSdDCml9Xc1vAbJpLDd9Qzj
-NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
-NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
-NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
-NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
-
-# PARTYKIT
-NEXT_PUBLIC_PARTYKIT_HOST="127.0.0.1:1999"
-NEXT_APP_URL="http://127.0.0.1:3000"
-
-# PLANETSCALE
-DATABASE_HOST=aws.connect.psdb.cloud
-DATABASE_USERNAME=4k2g0t13tdnj03qhouc7
-DATABASE_PASSWORD=pscale_pw_Q0LDEuRB6dLX5Gv1a8P2b8tfdI0xpEwdy3kbhvWFv6j
-DATABASE_URL=mysql://4k2g0t13tdnj03qhouc7:pscale_pw_Q0LDEuRB6dLX5Gv1a8P2b8tfdI0xpEwdy3kbhvWFv6j@aws.connect.psdb.cloud/lwj-habit-tracker?ssl={"rejectUnauthorized":true}
-'
+DATABASE_URL='mysql://4l8aq38u4pw4ehoqs6zw:pscale_pw_lKL2nYAT8HR1hrPQ3iUwwoLhGMnifE8DmLPhGRDlT6X@aws.connect.psdb.cloud/lwj-habit-tracker?ssl={"rejectUnauthorized":true}'
