--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@clerk/clerk-sdk-node": "^4.12.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
