--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "codegen": "kysely-codegen --out-file $PWD/kysely.codegen.ts"
   },
   "dependencies": {
-    "@clerk/clerk-react": "^4.26.3",
-    "@clerk/nextjs": "^4.25.3",
+    "@clerk/clerk-react": "^4.27.1",
+    "@clerk/nextjs": "^4.26.1",
     "@planetscale/database": "^1.11.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "kysely": "^0.26.3",
     "kysely-planetscale": "^1.4.0",
-    "next": "13.5.4",
+    "next": "14.0.0",
     "partysocket": "0.0.8",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
   },
